--- a/index.html
+++ b/index.html
@@ -12,18 +12,27 @@
 
 <body>
     <section class="section">
-        <h1>Mesure time between dates</h1>
-        <div>
-            <div>
+        <h1 class="section__h1">Mesure time between dates</h1>
+        <div class="section__div">
+            <div class="section__div-date section__div-padding">
                 <h2>Start Date</h2>
                 <input type="date" id="start-date" required>
             </div>
 
-            <div>
+            <div class="section__div-date section__div-padding">
                 <h2>End Date</h2>
                 <input type="date" id="end-date" required>
             </div>
         </div>
+        <div class="section__div">
+            <div class="section__div-padding">
+                <button class="section__preset-button">1 week</button>
+            </div>
+            <div class="section__div-padding">
+                <button class="section__preset-button">1 month</button>
+            </div>
+        </div>
+
 
 
     </section>
