--- a/index.html
+++ b/index.html
@@ -32,6 +32,17 @@
                 <button class="section__preset-button">1 month</button>
             </div>
         </div>
+        <div class="section__div">
+            <div class="section__div-padding">
+                <button class="section__preset-button">All days</button>
+            </div>
+            <div class="section__div-padding">
+                <button class="section__preset-button">Weekdays</button>
+            </div>
+            <div class="section__div-padding">
+                <button class="section__preset-button">Weekends</button>
+            </div>
+        </div>
 
 
 
