--- a/index.html
+++ b/index.html
@@ -26,26 +26,26 @@
 
         <div class="section__preset-div">
             <div class="preset-div__wrapper">
-                <button class="btn">1 week</button>
+                <button class="btn btn-one-week">1 week</button>
                 <p class="preset-div__p">Calculates 1 week from Start Date</p>
             </div>
             <div class="preset-div__wrapper">
-                <button class="btn">1 month</button>
+                <button class="btn btn-one-month">1 month</button>
                 <p class="preset-div__p">Calculates 1 month from Start Date</p>
             </div>
         </div>
 
         <div class="section__days-div">
             <div class="days-div__wrapper">
-                <button class="btn">All days</button>
+                <button class="btn btn-all-days">All days</button>
                 <p class="days-div__p">Calculates all days within chosen period</p>
             </div>
             <div class="days-div__wrapper">
-                <button class="btn">Only Weekdays</button>
+                <button class="btn btn-only-weekdays">Only Weekdays</button>
                 <p class="days-div__p">Calculates only weekdays within chosen period</p>
             </div>
             <div class="days-div__wrapper">
-                <button class="btn">Only Weekends</button>
+                <button class="btn btn-only-weekends">Only Weekends</button>
                 <p class="days-div__p">Calculates only weekdends within chosen period</p>
             </div>
         </div>
