--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
         <div class="section__result-btn">
             <button class="result-btn">Calculate</button>
-            <div class="result-area"></div>
+            <div class="result-area">Your result will be displayed here</div>
         </div>
 
 
