супер пупер дезигн

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         </div>
 
         <div class="section__days-div">
+            <h2 class="days-div__h2">Special Option</h2>
             <div class="days-div__wrapper">
                 <button class="btn btn-all-days">All days</button>
                 <p class="days-div__p">Calculates all days within chosen period</p>
