--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="date-div__wrapper">
                 <h2 class="date-div__h2">End date</h2>
-                <input class="date-div__input" type="date" id="end-date">
+                <input class="date-div__input" type="date" id="end-date" disabled>
             </div>
         </div>
 
@@ -49,6 +49,10 @@
                 <button class="btn btn-only-weekends">Only Weekends</button>
                 <p class="days-div__p">Calculates only weekdends within chosen period</p>
             </div>
+        </div>
+
+        <div class="section__selector-div">
+
         </div>
         <div class="section__result-btn">
             <button class="result-btn">Calculate</button>
