майже все господі

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
 
         <div class="section__selector-div">
-            <h2 class="selector-div__h2">Dimension of choice</h2>
+            <h2 class="selector-div__h2">Time Dimension</h2>
             <audio id="bgdsound" src="./sound/vecna.mp3" preload="auto"></audio>
 
             <select class="section__selector" id="selector">
