--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             <audio id="bgdsound" src="./sound/vecna.mp3" preload="auto"></audio>
 
             <select class="section__selector" id="selector">
+                <option disabled selected hidden>Choose</option>
                 <option value="seconds">Seconds</option>
                 <option value="minutes">Minutes</option>
                 <option value="hours">Hours</option>
