--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h2 class="days-div__h2">Special Option</h2>
             <div class="days-div__wrapper">
                 <input type="radio" id="radio1" name="radios" value='allDays' class="radio-option btn-all-days"></input>
-                <label for="radio1">All days</label>
+                <label for="radio1" checked="checked">All days</label>
                 <p class="days-div__p">Calculates all days within chosen period</p>
             </div>
             <div class="days-div__wrapper">
