--- a/index.html
+++ b/index.html
@@ -77,6 +77,19 @@
             <button class="result-btn">Calculate</button>
             <div class="result-area">Your result will be displayed here</div>
         </div>
+        <div class="section__table-div">
+            <table class="section__table" hidden>
+
+                <tr class="section__table-tr">
+                    <th class="section__table-th" colspan="3">Calculation Storage</th>
+                </tr>
+                <tr class="section__table-tr">
+                    <th class="section__table-th">Start Date</th>
+                    <th class="section__table-th">End Date</th>
+                    <th class="section__table-th">Result</th>
+                </tr>
+            </table>
+        </div>
 
 
 
